--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     <h4 class="dubious">That hog, upon whom I glower dubiously</h4>
     <div class="container dubious">
       
-        <img src="./images/the_prosciutto_concern.jpg">
-        
+         <img class="large" src="./images/the_prosciutto_concern.jpg">
+      </div>
+      <div class="column"></div>
+      <div class="column"></div>
     </div>
 
   </body>
